Complete back-end skill

--- a/index.html
+++ b/index.html
@@ -93,6 +93,26 @@
                         <img src="assets/icons/tailwindcss-ar21.svg"/>
 
                     </div>
+                    <div class="skillBox">
+                        <img src="assets/icons/php-ar21.svg"/>
+
+                    </div>
+                    <div class="skillBox">
+                        <img src="assets/icons/mysql-ar21.svg"/>
+
+                    </div>
+                    <div class="skillBox">
+                        <img src="assets/icons/mariadb-ar21.svg"/>
+
+                    </div>
+                    <div class="skillBox">
+                        <img src="assets/icons/docker-ar21.svg"/>
+
+                    </div>
+                    <div class="skillBox">
+                        <img src="assets/icons/laravel-ar21.svg"/>
+
+                    </div>
 
                 </div>
 
