--- a/index.html
+++ b/index.html
@@ -122,7 +122,36 @@
         </div>
 
     </div>
-    jkjkvjvj
+   
+    <div class="projects">
+        <div class="projectsContent">
+            <div class="row py-5">
+                <div class="col-12">
+                    <h1 class="text-center text-primary">Projetos</h1>
+
+                </div>
+
+            </div>
+
+            <div class="row py-5">
+                <div class="col-12 text-center">
+                    <h1>Não há projetos ainda</h1>
+                    <p class="projectSubDesc">Em desenvolvimento</p>
+
+                </div>
+
+            </div>
+            <div class="row py-2">
+                <div class="col-12 text-center">
+                    <img src="assets/icons/vazio.png" alt="vazio" class="text-center" width="150">
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </div>
     
 </body>
 </html>
