--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="col-12 my-4 aboutDesc mt-5">
                     <p>
                         Sou apaixonado por tecnologia, estou começando atuar como freelancer, tenho formação em
-                    <b>Tecnólogo em Sistemas para Internete</b> pela Universidade Luterana do Brasil
+                    <b>Tecnólogo em Sistemas para Internet</b> pela Universidade Luterana do Brasil
                     (ULBRA), também formado em <b>Técnico de Informática</b> pelo SENAC/RS.
                     Além disso tenho conhecimento em desenvolvimento WEB como php, banco de dados, laravel, UI/UX Design, SEO e marketing digital.
                     </p>
@@ -173,7 +173,7 @@
                         <div class="serviceBody">
                             <p>
                                 Criação de sites institucionais, blogs, e-commerces, 
-                                sites gerenciaveis (Intranets) e desenvolvimento de APIs.
+                                sites gerenciaveis, Intranets e desenvolvimento de APIs.
                             </p>
 
                         </div>
